# Smartcalculator

./: CMakeLists.txt  LICENSE  LLMPlugin.java  OVERHAUL_NOTES.txt  build.js  capacitor.config.json  index.html  main.cpp  package.json  patch_android.py
.github/workflows/: build-android.yml  build-apk.yml
Smartcalculator-fixed/: CMakeLists.txt  main.cpp
Smartcalculator-fixed/android/: AndroidManifest.xml
Smartcalculator-fixed/backend/: ApiClient.cpp  AppSettings.h  MathEngine.h
Smartcalculator-fixed/qml/: AITab.qml  CalcTab.qml  ConvertTab.qml  FormulaTab.qml  GraphTab.qml  RandomTab.qml  main.qml
Smartcalculator-fixed/qml/components/: AppTabBar.qml  ToastMessage.qml  UnitPill.qml
android/: AndroidManifest.xml
android/res/values/: styles.xml
backend/: ApiClient.cpp  ApiClient.h  AppSettings.cpp  AppSettings.h  FileHelper.cpp  FileHelper.h  HapticHelper.cpp  HapticHelper.h  MathEngine.cpp  MathEngine.h
qml/: AITab.qml  CalcTab.qml  ConvertTab.qml  FormulaTab.qml  GraphTab.qml  Main.qml  ProgrammerTab.qml  RandomTab.qml  Theme.qml
qml/components/: AppTabBar.qml  CalcButton.qml  MoreSheet.qml  StyledInput.qml  TabIcon.qml  ToastMessage.qml  UnitPill.qml
qml/icons/: README.md
templates/: MainActivity.java  mediapipe.gradle.txt  variables.gradle
